	Modified all portage::find*/portage::ebuild_which calls (that matter)
	to pass the search_timer timer_T object.
	* src/herds_xml_handler.cc: Fixed bug in <maintainingproject> XML file
	fetching (pre-existing copy gets truncated if fetching fails).
	* src/action_meta_handler.cc: Fixed bug when ambiguous packages are
	encountered (didn't display category).

2005-05-09 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (1.1.0_rc4).
	* lib/portage_find.cc: in find_package_regex_in, if it looks like a
	category was specified, and it exists, dont bother looking in the
	other categories.

2005-05-08 Aaron Walker <ka0ttic@gentoo.org>

	* doc/herdstat.1.in: A few small changes to the description. Added
	another example.
	* src/action_stats_handler.cc: Initial value of smallest_herd should
	be 1.
	* src/xml.hh: Added handler() member func for returning a pointer to
	the _handler member for use by users who don't want to create a
	sub-class of xml_T.
	* src/herds_xml_handler.cc, src/herds_xml_handler.hh: Added
	mpXMLHandler_T XML handler class for parsing XML files listed in
	herds.xml <maintainingproject> elements.  HerdsXMLHandler_T will now
	parse said file for developer information, then fill the herds member
	like it normally would.
	* lib/misc.hh: Updated fetch() prototypes so third arg (verbose)
	defaults to false.

2005-05-07 Aaron Walker <ka0ttic@gentoo.org>

	* src/metadata_xml_handler.cc: Don't append if @gentoo.org if the
	domain is not @gentoo.org to maintainer email.
	* src/action_pkg_handler.cc: Fixed a couple bugs; one where the first
	package would still be displayed in color if --nocolor was specified.
	The second one involved the longdesc not being displayed when
	--verbose is used.
	* src/herds_xml.cc, src/herds_xml.hh: Don't call fetch() and parse()
	from init() and have callers call it manually.  Otherwise, it'll be
	fetched/parsed on each action_herds_xml_handler_T instantiation.
	* src/action_dev_handler.cc, src/action_herd_handler.cc,